--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,4 +1,4 @@
 <% content_for :title, "Editing player" %>
 
 <%= render "form", player: @player %>
-<%= render 'shared/btns', obj: @player %>
+<%= render "btns", obj: @player %>
